--- a/demo/index.html
+++ b/demo/index.html
@@ -12,14 +12,49 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>lit-element demo</title>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <!-- <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script> -->
+  <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
   <!-- <script type="module" src="../lit-test.js"></script> -->
-  <script  src="../build/bundle.js"></script>
+  <!-- <script  src="../build/bundle.js"></script> -->
 </head>
 <body>
-  
+  <!--
+    Feature detect Custom Elements support. If the browser DOES support Custom
+    Elements then we need to load the custom-elements-es5-adapter because
+    our project code has been transpiled from ES2015 to ES5 and native Custom
+    Elements expect elements will be registered as classes.
+  -->
+  <div id="ce-es5-shim">
+    <script type="text/javascript">
+      if (!window.customElements) {
+        var ceShimContainer = document.querySelector('#ce-es5-shim');
+        ceShimContainer.parentElement.removeChild(ceShimContainer);
+      }
+    </script>
+    <script type="text/javascript" src="../node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+  </div>
+
   <lit-test id="elem" whales="2" foo="bar"></lit-test>
+
+  <!--
+    Use the webcomponents-loader script which will feature detect which Web
+    Components features are missing and lazy load the appropriate polyfills.
+    When we hear the 'WebComponentsReady' event from the polyfill bundle we can
+    insert our 'bundle.js'.
+  -->
+  <script>
+    (function() {
+      document.addEventListener('WebComponentsReady', function componentsReady() {
+        document.removeEventListener('WebComponentsReady', componentsReady, false);
+        var script = document.createElement('script');
+        /* Path to the webpack bundle */
+        script.src = '/build/bundle.js';
+        var refScript = document.getElementsByTagName('script')[0];
+        refScript.parentNode.insertBefore(script, refScript);
+      }, false);
+    })();
+  </script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 </body>
 <script>
 
